minor fixes: navigation section jump, deleted unnecessary code and updated readme-todos

--- a/src/main.scss
+++ b/src/main.scss
@@ -4,7 +4,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
 html {
-	scroll-padding-top: 57px;
+	scroll-padding-top: 55px;
 	scroll-behavior: smooth;
 }
 
