--- a/src/sass/sass_website_parts/_hero.scss
+++ b/src/sass/sass_website_parts/_hero.scss
@@ -60,27 +60,12 @@
 
 @media (width > 992px) {
 	.hero {
-		position: relative;
-		width: 100%;
 		height: 600px;
-		color: $secondary-color;
-		background-image: url('./assets/images/hero-medium.jpg');
-		background-size: cover;
+		background-image: url('./assets/images/hero-large.jpg');
 		background-position: bottom;
-		background-attachment: fixed;
-		z-index: 0;
 
 		&__content {
 			height: 700px;
-		}
-
-		&__text {
-			display: flex;
-			flex-direction: column;
-			justify-content: center;
-			align-items: flex-start;
-			gap: 0.5em;
-			height: 100%;
 		}
 
 		&__skip {
